Fix "Filter Models By" button text alignment

--- a/src/components/ModelList/_ModelList.ResponsiveHeader.scss
+++ b/src/components/ModelList/_ModelList.ResponsiveHeader.scss
@@ -77,11 +77,13 @@
         margin-bottom: 22px;
         margin-top: 22px;
         @include desktopWidth {
-          display: block;
+          display: flex;
+          align-items: center;
 
         }
         @include mobileWidth-lg {
           width: 100%;
+          justify-content: center;
         }
       }
     }
